--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "predeploy": "npm run build",
+    "preview": "next start",
+    "predeploy": "npm run build && echo > out/.nojekyll",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
